--- a/js-notes.html
+++ b/js-notes.html
@@ -97,6 +97,31 @@
         <a href="./?cs10-notes/bool-expressions">Boolean Expressions</a>
       </div>
     </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/if-statements">If Statements</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/while-loops">While Loops</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/for-loops">For Loops</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/uses-of-loops">Uses of Loops</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/nested-loops">Nested Loops</a>
+      </div>
+    </li>
   </ol>
 
   <!-- FUNCTIONS -->
