--- a/js-notes.html
+++ b/js-notes.html
@@ -89,7 +89,7 @@
   </ol>
 
   <!-- JS CONTROL STRUCTURES -->
-  <h2><i class="far fa-bookmark topic-heading"></i> JS CONTROL STRUCTURES</h2>
+  <h2><i class="far fa-bookmark topic-heading"></i> JS Control Structures</h2>
   <hr />
   <ol>
     <li>
