--- a/js-notes.html
+++ b/js-notes.html
@@ -162,7 +162,7 @@
   <ol>
     <li>
       <div class="li-div">
-        <a href="./?cs20-notes/types-of-ds">Types of Data Structures</a>
+        <a href="./?cs20-notes/array-basics">Array Basics</a>
       </div>
     </li>
     <li>
@@ -173,11 +173,6 @@
     <li>
       <div class="li-div">
         <a href="./?cs20-notes/traverse-arrays">Traverse Arrays</a>
-      </div>
-    </li>
-    <li>
-      <div class="li-div">
-        <a href="./?cs20-notes/modify-arrays">Modify Arrays</a>
       </div>
     </li>
     <li>
