--- a/template-js-notes-page.html
+++ b/template-js-notes-page.html
@@ -1,4 +1,4 @@
-<h1 class="main-heading">Note Topic</h1>
+<h1 class="main-heading">Note_Topic</h1>
 
 <section class="page-content">
   <!-- BACK LINK -->
@@ -12,7 +12,7 @@
   </div>
 
   <!-- TOPIC TITLE -->
-  <h2><i class="far fa-bookmark topic-heading"></i>Topic Title</h2>
+  <h2><i class="far fa-bookmark topic-heading"></i>Topic_Title</h2>
   <hr />
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit quae
