--- a/js-notes.html
+++ b/js-notes.html
@@ -124,6 +124,22 @@
     </li>
   </ol>
 
+  <!-- <CANVAS> -->
+  <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;canvas&gt;</h2>
+  <hr />
+  <ol>
+    <li>
+      <div class="li-div">
+        <a href="./?canvas-notes/pt-in-rect">Point in Rectangle</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?canvas-notes/pt-in-circle">Point in Circle</a>
+      </div>
+    </li>
+  </ol>
+
   <!-- FUNCTIONS -->
   <h2><i class="far fa-bookmark topic-heading"></i> Functions</h2>
   <hr />
