--- a/canvas-notes/pt-in-rect.html
+++ b/canvas-notes/pt-in-rect.html
@@ -14,7 +14,10 @@
   <!-- TOPIC TITLE -->
   <h2><i class="far fa-bookmark topic-heading"></i>Point in Rectangle</h2>
   <hr />
-  <p>A point will be in a rectangle if the following are BOTH true:</p>
+  <p>
+    A point will be in a rectangle if the following are
+    <strong>BOTH</strong> true:
+  </p>
 
   <ul>
     <li>
