--- a/js-notes.html
+++ b/js-notes.html
@@ -138,6 +138,16 @@
         <a href="./?canvas-notes/pt-in-circle">Point in Circle</a>
       </div>
     </li>
+    <li>
+      <div class="li-div">
+        <a href="./?canvas-notes/rect-collision">Rectangle Collision</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?canvas-notes/circle-collision">Circle Collision</a>
+      </div>
+    </li>
   </ol>
 
   <!-- FUNCTIONS -->
