--- a/js-notes.html
+++ b/js-notes.html
@@ -188,6 +188,11 @@
   <ol>
     <li>
       <div class="li-div">
+        <a href="./?cs20-notes/intro-to-ds">Intro to Data Structures</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
         <a href="./?cs20-notes/array-basics">Array Basics</a>
       </div>
     </li>
