update ds notes

--- a/cs20-notes/create-arrays.html
+++ b/cs20-notes/create-arrays.html
@@ -13,8 +13,11 @@
 
   <!-- CREATE AN ARRAY WITH [] -->
   <h2><i class="far fa-bookmark topic-heading"></i>Create an Array with [ ]</h2>
-  <hr>
-  <p>An array can be created by putting comma-separated values into square brackets.</p>
+  <hr />
+  <p>
+    An array can be created by putting comma-separated values into square
+    brackets.
+  </p>
   <pre><code class="lang-js">
 let emptyArray = [];
 let numberArray = [1, 2, 3.0, 4, 5];
@@ -23,10 +26,17 @@ let mixedArray = ["text", 7, true, 3.14, [5, 10, 15]];
   </code></pre>
 
   <!-- CREATE AN ARRAY FROM A STRING -->
-  <h2><i class="far fa-bookmark topic-heading"></i>Create an Array From a String</h2>
-  <hr>
-  <p>A string may be turned into an array with the <strong>split()</strong> method.</p>
-  <p>The <strong>split()</strong> method takes in an argument that will be used as the token to separate the string.
+  <h2>
+    <i class="far fa-bookmark topic-heading"></i>Create an Array From a String
+  </h2>
+  <hr />
+  <p>
+    A string may be turned into an array with the
+    <strong>split()</strong> method.
+  </p>
+  <p>
+    The <strong>split()</strong> method takes in an argument that will be used
+    as the token to separate the string.
   </p>
 
   <pre><code class="lang-js">
@@ -46,9 +56,14 @@ let characterArray = sentence.split("");
 // -> ["I"," ","l","o","v","e"," ","a","r","r","a","y","s"]
 </code></pre>
 
-  <p>The <strong>join()</strong> method may be used to turn an array back into a string.</p>
-  <p>The <strong>join()</strong> method takes in an argument that will be used as the token to place between array
-    elements.</p>
+  <p>
+    The <strong>join()</strong> method may be used to turn an array back into a
+    string.
+  </p>
+  <p>
+    The <strong>join()</strong> method takes in an argument that will be used as
+    the token to place between array elements.
+  </p>
 
   <pre><code class="lang-js">
 // Convert an array into a string with join()
@@ -63,11 +78,15 @@ let sentence2 = wordArray.join("-");
 </code></pre>
 
   <!-- CREATE AN ARRAY WITH A LOOP -->
-  <h2><i class="far fa-bookmark topic-heading"></i>Create an Array with a Loop</h2>
-  <hr>
+  <h2>
+    <i class="far fa-bookmark topic-heading"></i>Create an Array with a Loop
+  </h2>
+  <hr />
   <p>Loops may be used to create arrays.</p>
-  <p>Start with an empty array and then use a loop to add items one at a time to the end of the array using the
-    <strong>push()</strong> method.</p>
+  <p>
+    Start with an empty array and then use a loop to add items one at a time to
+    the end of the array using the <strong>push()</strong> method.
+  </p>
 
   <pre><code class="lang-js">
 // Create an array with identical values (100 exclamation marks)
@@ -95,13 +114,79 @@ for (let num = 0; num <= 50; num += 2) {
 }
 </code></pre>
 
+  <!-- CREATE AN ARRAY FROM A TEXT FILE -->
+  <h2>
+    <i class="far fa-bookmark topic-heading"></i> Create an Array from a TEXT
+    File
+  </h2>
+  <hr />
+
+  <p>The following code shows how to load data from a text file.</p>
+  <p>Each line of the text file will become an array element.</p>
+
+  <h4 class="code-title">names.txt</h4>
+  <pre><code class="lang-js">
+Arya
+Badal
+Cameron
+David 
+Ezra
+Fred
+Grace
+Hannah
+...
+</code></pre>
+
+  <h4 class="code-title">main.js</h4>
+  <pre><code class="lang-js">
+// Load data from names.txt
+let names;
+fetch('names.txt')
+  .then((res) => res.text())
+  .then((data) => names = data.split(/\r?\n/));
+</code></pre>
+
+  <p>
+    The global variable names will now be an array of names as defined in the
+    names.txt file.
+  </p>
+
+  <p>
+    <code class="lang-js">fetch()</code> loads the contents of the file into
+    <code class="lang-js">res</code>.
+  </p>
+
+  <p>
+    <code class="lang-js">res.text()</code> then converts the text file content
+    to a string and loads it into data.
+  </p>
+
+  <p>
+    Data is then split using a regular expression that catches different
+    possible line endings: /r, /n, /r/n.
+  </p>
+
+  <p>
+    Global variable names is then assigned the array that data has been split
+    into.
+  </p>
+
   <!-- CREATE AN ARRAY FROM A JSON FILE -->
-  <h2><i class="far fa-bookmark topic-heading"></i>Create an Array from a JSON File</h2>
-  <hr>
+  <h2>
+    <i class="far fa-bookmark topic-heading"></i>Create an Array from a JSON
+    File
+  </h2>
+  <hr />
 
   <p>JSON stands for JavaScript Object Notation.</p>
-  <p>JSON is a data-interchange format that may be used to convert strings to data structures and vice-versa.</p>
-  <p>Here we load a file containing a JSON string and convert it into the data structure that the string represents.</p>
+  <p>
+    JSON is a data-interchange format that may be used to convert strings to
+    data structures and vice-versa.
+  </p>
+  <p>
+    Here we load a file containing a JSON string and convert it into the data
+    structure that the string represents.
+  </p>
 
   <h4 class="code-title">points.json</h4>
   <pre><code class="lang-js">
@@ -129,13 +214,20 @@ fetch('points.json')
     .then((data) => points = data);
   </code></pre>
 
-  <p>The global variable points will now be an array of point objects as defined in the points.json file.</p>
+  <p>
+    The global variable points will now be an array of point objects as defined
+    in the points.json file.
+  </p>
 
-  <p><code class="lang-js">fetch()</code> loads the contents of the file into <code class="lang-js">res</code>.</p>
+  <p>
+    <code class="lang-js">fetch()</code> loads the contents of the file into
+    <code class="lang-js">res</code>.
+  </p>
 
-  <p><code class="lang-js">res.json()</code> then converts the JSON string from the file into a data structure and loads
-    it
-    into data.</p>
+  <p>
+    <code class="lang-js">res.json()</code> then converts the JSON string from
+    the file into a data structure and loads it into data.
+  </p>
 
   <p>Global variable points is then assigned data.</p>
   <hr />
