--- a/cs20-notes/intro-to-ds.html
+++ b/cs20-notes/intro-to-ds.html
@@ -45,6 +45,14 @@ vowels[3]; // -> "o"
 vowels[4]; // -> "u"
   </code></pre>
 
+  <p>
+    The length of an array can be found by using the
+    <strong>length</strong> property.
+  </p>
+  <pre><code class="lang-js">
+vowels.length; // -> 5
+  </code></pre>
+
   <!-- OBJECTS -->
   <h2><i class="far fa-bookmark topic-heading"></i> Intro to Objects</h2>
   <hr />
@@ -105,6 +113,9 @@ let points = [
   } 
 ];
 
+// Access objects in array by index...
+// ... then access object properties.
+points[0].label; // -> "A"
 points[0].x; // -> 2
 points[1].label; // -> "B"
 points[2].y; // -> 5
