--- a/js-notes.html
+++ b/js-notes.html
@@ -193,17 +193,17 @@
     </li>
     <li>
       <div class="li-div">
-        <a href="./?cs20-notes/array-basics">Array Basics</a>
-      </div>
-    </li>
-    <li>
-      <div class="li-div">
         <a href="./?cs20-notes/create-arrays">Create Arrays</a>
       </div>
     </li>
     <li>
       <div class="li-div">
         <a href="./?cs20-notes/traverse-arrays">Traverse Arrays</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs20-notes/modify-arrays">Modify Arrays</a>
       </div>
     </li>
     <li>
