--- a/cs20-notes/modify-arrays.html
+++ b/cs20-notes/modify-arrays.html
@@ -11,9 +11,13 @@
     </a>
   </div>
 
-  <h2><i class="far fa-bookmark topic-heading"></i> Modify Elements with [ ]</h2>
-  <hr>
-  <p>You may reassign / modify array elements when accesing the element with [ ].</p>
+  <h2>
+    <i class="far fa-bookmark topic-heading"></i> Modify Elements with [ ]
+  </h2>
+  <hr />
+  <p>
+    You may reassign / modify array elements when accesing the element with [ ].
+  </p>
   <pre><code class="lang-js">
 let nums = [1, 2, 3, 4, 5, 6];
 // index -> 0  1  2  3  4  5
@@ -23,16 +27,22 @@ nums[3] += 5; // [7, 2, 3, 9, 5, 6]
 nums[5]++;    // [7, 2, 3, 9, 5, 7]
     </code></pre>
 
-  <h2><i class="far fa-bookmark topic-heading"></i>array.push() / array.pop()</h2>
-  <hr>
-  <p>The <strong>push</strong> method will add values to the end of an array.</p>
+  <h2>
+    <i class="far fa-bookmark topic-heading"></i>array.push() / array.pop()
+  </h2>
+  <hr />
+  <p>
+    The <strong>push</strong> method will add values to the end of an array.
+  </p>
   <pre><code class="lang-js">
 // Add value to end of array
 let vowels = ["a", "e", "i", "o", "u"];
 vowels.push("y"); // ["a", "e", "i", "o", "u", "y"]
     </code></pre>
 
-  <p>The <strong>pop</strong> method will remove the last element from an array</p>
+  <p>
+    The <strong>pop</strong> method will remove the last element from an array
+  </p>
   <pre><code class="lang-js">
 // Remove last element
 let vowels = ["a", "e", "i", "o", "u", "y"];
@@ -42,11 +52,13 @@ vowels.pop(); // ["a", "e", "i", "o", "u"]
 let lastElement = anArray.pop();
     </code></pre>
 
-
   <!-- Topic -->
   <h2><i class="far fa-bookmark topic-heading"></i>array.splice()</h2>
-  <hr>
-  <p>The <strong>splice</strong> method may add/or remove array elements at specific index.</p>
+  <hr />
+  <p>
+    The <strong>splice</strong> method may add/or remove array elements at a
+    specific index.
+  </p>
   <pre><code class="lang-js">
 // Add and/or Remove array elements at a specific index 
 anArray.splice(index, howManyToRemove, itemToAdd1, itemToAdd2, ...);
