--- a/js-notes.html
+++ b/js-notes.html
@@ -1,6 +1,17 @@
-<h1 class="main-heading">JavaScript Notes</h1>
+<h1 class="main-heading">Computing Science Notes</h1>
 
 <section class="notes-list">
+  <!-- JAVASCRIPT FUNDAMENTALS -->
+  <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS</h2>
+  <hr />
+  <ol>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/html-basics">HTML Basics</a>
+      </div>
+    </li>
+  </ol>
+
   <!-- JAVASCRIPT FUNDAMENTALS -->
   <h2><i class="far fa-bookmark topic-heading"></i> JavaScript Fundamentals</h2>
   <hr />
@@ -53,6 +64,37 @@
     <li>
       <div class="li-div">
         <a href="./?cs10-notes/ipo-algorithm">IPO Algorithm</a>
+      </div>
+    </li>
+  </ol>
+
+  <!-- JS & HTML -->
+  <h2><i class="far fa-bookmark topic-heading"></i> JS & HTML</h2>
+  <hr />
+  <ol>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/getElementById">getElementById()</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/click-events">Click Events</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/innerHTML">innerHTML</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/input-elements">&lt;input&gt; Elements</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/modify-style">Modify Style</a>
       </div>
     </li>
   </ol>
