--- a/cs10-notes/html-basics.html
+++ b/cs10-notes/html-basics.html
@@ -58,7 +58,7 @@
   <h4 class="code-title">Web Browser Display of above HTML Code</h4>
   <img
     style="border: 1px solid grey"
-    src="../img/html-result.PNG"
+    src="img/html-result.PNG"
     alt="Web Browser Display"
     class="img-fluid"
   />
@@ -99,7 +99,7 @@
     Basic HTML elements consist of an opening tag, content and a closing tag.
   </p>
   <p>
-    <img class="img-fluid" src="../img/html-element.PNG" alt="HTML Element" />
+    <img class="img-fluid" src="img/html-element.PNG" alt="HTML Element" />
   </p>
 
   <h3 style="margin-block: 1.5rem">HTML Attributes</h3>
@@ -191,7 +191,7 @@
 
   <p>The HTML Dom for the Page Structure code above.</p>
   <p>
-    <img class="img-fluid" src="../img/html-dom.PNG" alt="HTML Dom" />
+    <img class="img-fluid" src="img/html-dom.PNG" alt="HTML Dom" />
   </p>
 
   <p>
