--- a/cs20-notes/intro-to-ds.html
+++ b/cs20-notes/intro-to-ds.html
@@ -6,7 +6,11 @@
     <a class="back-link" href="./?js-notes">
       <i class="fas fa-angle-double-left"></i> JS Notes
     </a>
-    <a href="#" class="yt-link d-none" target="_blank">
+    <a
+      href="https://www.youtube.com/playlist?list=PLVrsNRbJzKu8_ljWXJ911zQ1wQtI5iqDI"
+      class="yt-link"
+      target="_blank"
+    >
       <i class="fa-brands fa-youtube fa-lg"></i> Video Notes
     </a>
   </div>
