--- a/cs20-notes/copy-compare.html
+++ b/cs20-notes/copy-compare.html
@@ -6,18 +6,28 @@
     <a class="back-link" href="./?js-notes">
       <i class="fas fa-angle-double-left"></i> JS Notes
     </a>
-    <a href="#" class="yt-link d-none" target="_blank">
+    <a
+      href="https://www.youtube.com/playlist?list=PLVrsNRbJzKu88eCDNOXmHwr8CY1Wubyac"
+      class="yt-link"
+      target="_blank"
+    >
       <i class="fa-brands fa-youtube fa-lg"></i> Video Notes
     </a>
   </div>
 
   <!-- COPY ARRAYS -->
   <h2><i class="far fa-bookmark topic-heading"></i>Copy Arrays</h2>
-  <hr>
-  <p>The <strong>slice()</strong> method may be used to <strong>copy</strong> all or part of an array.</p>
-  <p>The <strong>slice()</strong> method takes in optional start <em>(inclusive)</em> and stop <em>(exclusive)</em>
-    arguments that control the section of the array to copy. The default start value is 0 and the default stop value
-    is the length of the array.</p>
+  <hr />
+  <p>
+    The <strong>slice()</strong> method may be used to <strong>copy</strong> all
+    or part of an array.
+  </p>
+  <p>
+    The <strong>slice()</strong> method takes in optional start
+    <em>(inclusive)</em> and stop <em>(exclusive)</em> arguments that control
+    the section of the array to copy. The default start value is 0 and the
+    default stop value is the length of the array.
+  </p>
 
   <pre><code class="lang-js">
 // Array Slice Method 
@@ -36,10 +46,15 @@ let slice3 = anArray.slice();
 
   <!-- COPY ARRAYS -->
   <h2><i class="far fa-bookmark topic-heading"></i>Compare Arrays</h2>
-  <hr>
-  <p>To <strong>compare</strong> arrays, one technique is to convert the arrays to strings and then check the strings
-    for equality.</p>
-  <p>The <strong>JSON.stringify()</strong> method may be used to convert an array to a string.</p>
+  <hr />
+  <p>
+    To <strong>compare</strong> arrays, one technique is to convert the arrays
+    to strings and then check the strings for equality.
+  </p>
+  <p>
+    The <strong>JSON.stringify()</strong> method may be used to convert an array
+    to a string.
+  </p>
 
   <pre><code class="lang-js">
 // Array Compare with JSON.stringify 
