add player movement

--- a/js-notes.html
+++ b/js-notes.html
@@ -2,7 +2,7 @@
 
 <section class="notes-list">
   <!-- JAVASCRIPT FUNDAMENTALS -->
-  <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS</h2>
+  <!-- <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS</h2>
   <hr />
   <ol>
     <li>
@@ -10,7 +10,7 @@
         <a href="./?cs10-notes/html-basics">HTML Basics</a>
       </div>
     </li>
-  </ol>
+  </ol> -->
 
   <!-- JAVASCRIPT FUNDAMENTALS -->
   <h2><i class="far fa-bookmark topic-heading"></i> JavaScript Fundamentals</h2>
@@ -170,6 +170,11 @@
   <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;canvas&gt;</h2>
   <hr />
   <ol>
+    <li>
+      <div class="li-div">
+        <a href="./?canvas-notes/player-movement">Player Movement</a>
+      </div>
+    </li>
     <li>
       <div class="li-div">
         <a href="./?canvas-notes/pt-in-rect">Point in Rectangle</a>
