--- a/cs10-notes/if-statements.html
+++ b/cs10-notes/if-statements.html
@@ -30,7 +30,7 @@ if (boolean_expression) {
   <p>
     <img
       class="img-fluid-max"
-      src="img/if-binary-diagram.PNG"
+      src="img/if-binary-diagram.png"
       alt="Binary Selection"
     />
   </p>
@@ -46,7 +46,7 @@ if (boolean_expression) {
   <p>
     <img
       class="img-fluid-max"
-      src="img/if-unary-diagram.PNG"
+      src="img/if-unary-diagram.png"
       alt="Unary Selection"
     />
   </p>
@@ -74,7 +74,7 @@ if (boolean_expression_1) {
   <p>
     <img
       class="img-fluid-max"
-      src="img/if-chained-diagram.PNG"
+      src="img/if-chained-diagram.png"
       alt="Chained Selection"
     />
   </p>
@@ -96,7 +96,7 @@ if (boolean_expression_1) {
   <p>
     <img
       class="img-fluid-max"
-      src="img/if-chained-no-else-diagram.PNG"
+      src="img/if-chained-no-else-diagram.png"
       alt="Chained No Else Selection"
     />
   </p>
