--- a/js-notes.html
+++ b/js-notes.html
@@ -227,5 +227,10 @@
         <a href="./?cs20-notes/copy-compare">Copy & Compare Arrays</a>
       </div>
     </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs20-notes/array-algorithms">Common Array Algorithms</a>
+      </div>
+    </li>
   </ol>
 </section>
